Fix MQEE-101 test_object/test_suite is too long on test round page.

--- a/marquee-web-main/app/assets/stylesheets/project.sass
+++ b/marquee-web-main/app/assets/stylesheets/project.sass
@@ -298,4 +298,6 @@ table.test-steps
 .expected-result
   word-wrap: break-word
   width: 546px
-      
+ul.value
+  li.long-name:hover
+    background-color: #eeeef9
